feat: :white_check_mark: Add navbar

--- a/blockestate/src/index.css
+++ b/blockestate/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @layer base {
   html {
     font-family: Inter, system-ui, sans-serif;
@@ -9,6 +15,8 @@
   
   body {
     @apply bg-white text-gray-900;
+    width: 100vw;
+    overflow-x: hidden;
   }
 }
 
@@ -36,12 +44,8 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+#root {
+  width: 100%;
 }
 
 h1 {
